cambios del boton

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </p>
     </h2>
 
-<button type="button">tocame</button>
+<button type="button" color="azul">soy un boton sin funcion</button>
+
 </body>
 </html>
